--- a/e4e_sleep_timer_fw/e4e_sleep_timer_fw.ioc
+++ b/e4e_sleep_timer_fw/e4e_sleep_timer_fw.ioc
@@ -1,4 +1,41 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.LPUART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.LPUART1_RX.0.EventEnable=DISABLE
+Dma.LPUART1_RX.0.Instance=DMA1_Channel1
+Dma.LPUART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.LPUART1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.LPUART1_RX.0.Mode=DMA_CIRCULAR
+Dma.LPUART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.LPUART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.LPUART1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.LPUART1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.LPUART1_RX.0.RequestNumber=1
+Dma.LPUART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.LPUART1_RX.0.SignalID=NONE
+Dma.LPUART1_RX.0.SyncEnable=DISABLE
+Dma.LPUART1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.LPUART1_RX.0.SyncRequestNumber=1
+Dma.LPUART1_RX.0.SyncSignalID=NONE
+Dma.Request0=LPUART1_RX
+Dma.Request1=USART1_RX
+Dma.RequestsNb=2
+Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.1.EventEnable=DISABLE
+Dma.USART1_RX.1.Instance=DMA1_Channel2
+Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.1.Mode=DMA_CIRCULAR
+Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.1.RequestNumber=1
+Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_RX.1.SignalID=NONE
+Dma.USART1_RX.1.SyncEnable=DISABLE
+Dma.USART1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.1.SyncRequestNumber=1
+Dma.USART1_RX.1.SyncSignalID=NONE
 File.Version=6
 KeepUserPlacement=false
 LPTIM1.ClockPrescaler=LPTIM_PRESCALER_DIV128
@@ -7,15 +44,16 @@ LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate,WordLength
 LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.Family=STM32G0
-Mcu.IP0=LPTIM1
-Mcu.IP1=LPUART1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=RTC
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP0=DMA
+Mcu.IP1=LPTIM1
+Mcu.IP2=LPUART1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32G071R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -44,6 +82,8 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G071RBTx
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -133,7 +173,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_LPTIM1_Init-LPTIM1-false-HAL-true,5-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_LPTIM1_Init-LPTIM1-false-HAL-true,5-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APBFreq_Value=16000000
 RCC.APBTimFreq_Value=16000000
@@ -189,3 +229,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-G071RB
 boardIOC=true
+isbadioc=false
