--- a/e4e_sleep_timer_fw/e4e_sleep_timer_fw.ioc
+++ b/e4e_sleep_timer_fw/e4e_sleep_timer_fw.ioc
@@ -40,7 +40,7 @@ File.Version=6
 KeepUserPlacement=false
 LPTIM1.ClockPrescaler=LPTIM_PRESCALER_DIV128
 LPTIM1.IPParameters=ClockPrescaler
-LPUART1.BaudRate=115200
+LPUART1.BaudRate=9600
 LPUART1.IPParameters=BaudRate,WordLength
 LPUART1.WordLength=UART_WORDLENGTH_8B
 Mcu.CPN=STM32G071RBT6
@@ -86,12 +86,12 @@ MxDb.Version=DB.6.0.50
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.RTC_TAMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART3_4_LPUART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA13.GPIOParameters=GPIO_Label
@@ -213,7 +213,8 @@ RCC.VCOOutputFreq_Value=128000000
 RTC.Alarm-Alarm\ A=RTC_ALARM_A
 RTC.Format=RTC_FORMAT_BIN
 RTC.IPParameters=Alarm-Alarm A,Format
-USART1.IPParameters=VirtualMode-Asynchronous
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
